Fix letter spacing in Banner and Cards sections

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -1178,17 +1178,18 @@ h1 {
     }
 
     h1 {
-      width: clamp(400px, 60vw, 650px);
+      width: clamp(400px, 65vw, 700px);
       font-weight: 800;
       font-size: 38px;
       line-height: 52px;
-      letter-spacing: 0.25%;
+      letter-spacing: 2px;
       color: white;
 
       @media all and (max-width: $mobile-width) {
         margin-left: 15px;
         width: 80%;
         font-size: 18px;
+        letter-spacing: 1px;
         line-height: 28px;
         text-align: start;
       }
@@ -1234,12 +1235,13 @@ h1 {
       font-weight: 700;
       font-size: 36px;
       line-height: 49px;
-      letter-spacing: 0.25%;
+      letter-spacing: 2px;
       color: #f8492d;
 
       @media all and (max-width: $mobile-width) {
         margin-bottom: 35px;
         font-size: 22px;
+        letter-spacing: 1px;
         line-height: 24px;
       }
     }
@@ -1249,7 +1251,6 @@ h1 {
       font-weight: 400;
       font-size: 22px;
       line-height: 32px;
-      letter-spacing: 0.25%;
       text-align: center;
 
       @media all and (max-width: $mobile-width) {
@@ -1303,7 +1304,6 @@ h1 {
           font-weight: 600;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 0.25%;
           color: white;
 
           @media all and (max-width: $mobile-width) {
@@ -1316,7 +1316,6 @@ h1 {
           font-weight: 600;
           font-size: 26px;
           line-height: 32px;
-          letter-spacing: 0.25%;
           color: white;
           text-align: center;
 
